# Exact_algorithms_dot_product

./: CMakeLists.txt  README.md
include/: fma.hpp  kobbelt.hpp  long_accumulator.hpp  merge.hpp  pichat.hpp  sorting.hpp
src/: fma.cpp  kobbelt.cpp  long_accumulator.cpp  main.cpp  merge.cpp  pichat.cpp  sorting.cpp
tests/: tests.cpp
